# simple-link-shortener

./: .dockerignore  Dockerfile  README.md  docker-compose.yaml
.github/workflows/: release.yml
backend/: .env.sample  .gitignore  Cargo.toml  Dockerfile.dev
backend/.sqlx/: query-1318523adc0fc62f0a7e2664372de2270120d295ea4393b5f0b373aef05cd8bb.json  query-2139928a5bba329f8acf61f7fee9529da12166e44d593dae6b0765f91200f6de.json  query-2d668f02d120d2d7f3742d8cf50f34d79224ff8a2793b8f9a328891434169d1c.json  query-3225f338fd74ef133f37dc81df5c66020be99a39d00cf69fbff2674b04683953.json  query-67903ba12fc6033076f4ee946f279bde70555d2155e1f41eb304174f6eaaa1b9.json
backend/db/: file.db
backend/migrations/: 20240614114327_init.sql  20240614153210_click-tracker.sql  20241011000000_init.sql
backend/src/: main.rs
backend/src/models/: links.rs
helm/: Chart.yaml
ui/: index.html  package-lock.json  package.json
ui/src/: App.tsx  index.scss
ui/src/Components/: ClickList.tsx  LinkList.tsx  Links.module.scss  Links.tsx  NewLink.tsx  index.ts
ui/src/Requests/: api.ts
