[package]
name = "links"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "links"
path = "src/main.rs"

[dependencies]
salvo = { version = "0.67", features = ["server", "quinn", "serve-static"], default-features = false }
tokio = { version = "1.37", features = ["rt", "macros"], default-features = false }
tracing = "0"
tracing-subscriber = "0"
serde = { version = "1", features = ["derive"], default-features = false }
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls" , "sqlite" ] }
once_cell = { version = "1.19", default-features = false }
