[package]
name = "simple-link-shortener"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "simple-link-shortener"
path = "src/main.rs"

[dependencies]
salvo = { version = "0", features = [
    "server",
    "quinn",
    "serve-static",
    "logging",
], default-features = false }
tokio = { version = "1", features = ["rt", "macros"], default-features = false }
tracing = "0"
tracing-subscriber = "0"
serde = { version = "1", features = ["derive"], default-features = false }
sqlx = { version = "0", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "time",
    "chrono",
] }
once_cell = { version = "1", default-features = false }
serde_json = "1"
confique = "0"
dotenv = "0.15.0"
