[package]
name = "simple-link-shortener"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "simple-link-shortener"
path = "src/main.rs"

[dependencies]
actix-web = "4"
actix-cors = "0"
actix-files = "0"
actix-rt = "2"
env_logger = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0", features = [
    "default",
    "chrono",
    "json",
    "sqlite",
    "runtime-actix-rustls",
] }
confique = "0"
chrono = { version = "0", features = ["serde"] }
futures = "0.3.31"
rand = "0.8.5"
time = "0.3.36"
